# zendesk-roleplay

./: .env.example  .gitignore  TROUBLESHOOTING.md  Taskfile.yml  USAGE.md  app.py  intents.py  main.py  migration.py  providers.py  pyproject.toml  requirements.txt  scenario.yml  scoring.py  storage.py  ui.py
.github/workflows/: commit.yaml
data/: 1757895635037-eval.py  eval.py  test.jsonl  train.jsonl  val.jsonl
src/common/: __init__.py  circuit_breaker.py  embedding_cache.py  rate_limiter.py  storage.py  validation.py
src/core/: __init__.py  app.py  intents.py  providers.py  scenario.yml  ui.py
src/data/: 1757895635037-eval.py  anthropic_model_prompt.py  eval.py  learnosity_support_intents.jsonl  migration.py  train.jsonl  usecase.yaml  val.jsonl  validate.jsonl
src/db/: __init__.py  init_db.py  migrate_db.py
src/test/: __init__.py  test_app.py  test_intent.py  test_providers.py
test/: test_intent.py  test_providers.py
