[project]
name = "zendesk-roleplay"
version = "0.1.0"
description = ""
authors = [
    {name = "Terry A. Brooks",email = "terry.arthur@brooksjr.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gradio (>=5.44.1,<6.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "openai (>=1.106.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-cov (>=6.3.0,<7.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "gradio-modal (>=0.0.4,<0.0.5)",
    "evaluate (>=0.4.5,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "huggingface-hub (>=0.35.1,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
autoflake = "^2.3.1"
ruff = "^0.12.12"

